Overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ li { list-style-type: none }
       left: 270px;
   }
     #layout.active > #menu {
-      left: 0px;
+      left: 270px;
     }
     #layout.active > #menu > #menu-drag {
       display: none;
@@ -78,9 +78,10 @@ li { list-style-type: none }
 #menu {
   position: fixed;
   top: 0;
-  left: -270px;
+  left: 0;
   bottom: 0;
   width: 270px;
+  margin-left: -270px; 
   z-index: 2; 
   /* -webkit-overflow-scrolling: touch; */
 
@@ -413,7 +414,7 @@ li { list-style-type: none }
 
   /* Display menu */
   #menu {
-    left: 0px;
+    left: 270px;
   }
 
   #menu-drag {
